@@ -3,6 +3,7 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:cmf="http://namespaces.zope.org/cmf"
     i18n_domain="collective.pwexpiry">
 
   <five:registerPackage package="." initialize=".initialize" />
@@ -12,6 +13,9 @@
 
   <include package=".actions" />
   <include package=".browser" />
+  <include package=".upgrades" />
+
+  <cmf:registerDirectory name="skins" directory="skins" recursive="True" />
 
   <genericsetup:registerProfile
       name="default"
