@@ -61,3 +61,8 @@ class IUserUnlocked(Interface):
     """
 
     user = Attribute("The user that was unlocked")
+
+
+class ICollectivePWExpiryLayer(Interface):
+    """A layer specific to the collective.pwexpiry package.
+    """
