@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>0001</version>
+    <version>0002</version>
 </metadata>
