@@ -1,0 +1,18 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+
+  <object name="pwexpiry"
+      meta_type="Filesystem Directory View"
+      directory="collective.pwexpiry:skins/pwexpiry"/>
+
+  <skin-path name="Sunburst Theme" >
+    <layer name="pwexpiry"
+        insert-after="custom"/>
+  </skin-path>
+
+  <skin-path name="Plone Default" >
+    <layer name="pwexpiry"
+        insert-after="custom"/>
+  </skin-path>
+
+</object>
