@@ -1,0 +1,119 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"
+      lang="en-US"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="plone">
+<body>
+    <metal:main fill-slot="main"
+         tal:define="errors options/state/getErrors">
+
+        <h1 class="documentFirstHeading"
+            i18n:domain="passwordresettool"
+            i18n:translate="heading_reset_password">Set your password</h1>
+
+        <div class="documentDescription" i18n:domain="passwordresettool"
+           i18n:translate="description_reset_password">
+            Please fill out the form below to set your password.
+        </div>
+
+        <div id="content-core">
+            <form class="enableAutoFocus"
+                  name="pwreset_action"
+                  method="post"
+                  tal:attributes="action string:${context/absolute_url}/${template/getId}">
+                <fieldset>
+                    <legend i18n:domain="passwordresettool"
+                            i18n:translate="legend_new_password">New Password</legend>
+
+                    <input type="hidden"
+                           name="randomstring"
+                           value=""
+                           tal:attributes="value options/randomstring | request/randomstring | nothing" />
+
+                    <div class="field"
+                         tal:define="error errors/userid | nothing;
+                                     site_properties context/portal_properties/site_properties;
+                                     use_email_as_login site_properties/use_email_as_login|nothing;"
+                         tal:attributes="class python:test(error, 'field error', 'field')"
+                         tal:condition="here/portal_password_reset/checkUser | nothing">
+
+                      <tal:username tal:condition="not:use_email_as_login">
+                        <label for="userid"
+                               i18n:domain="passwordresettool"
+                               i18n:translate="label_my_user_name_is">My user name is</label>
+                        <div tal:content="error">Validation error output</div>
+
+                        <div class="formHelp"
+                             i18n:domain="passwordresettool"
+                             i18n:translate="help_userid">
+                            Enter your user name for verification.
+                        </div>
+                      </tal:username>
+                      <tal:email tal:condition="use_email_as_login">
+                        <label for="userid"
+                               i18n:domain="passwordresettool"
+                               i18n:translate="label_my_email_address_is">My email address is</label>
+                        <div tal:content="error">Validation error output</div>
+
+                        <div class="formHelp"
+                             i18n:domain="passwordresettool"
+                             i18n:translate="help_verify_email">
+                            Enter your email address for verification.
+                        </div>
+                      </tal:email>
+
+                        <input name="userid" id="userid" />
+                    </div>
+
+                    <div class="field"
+                         tal:define="error errors/password | nothing;"
+                         tal:attributes="class python:test(error, 'field error', 'field')">
+
+                        <label for="password"
+                               i18n:translate="label_new_password">New password</label>
+                        <div tal:content="error">Validation error output</div>
+
+                        <input type="password"
+                               id="password"
+                               name="password"
+                               size="10" />
+                    </div>
+
+                    <div class="field"
+                         tal:define="error errors/password | nothing;"
+                         tal:attributes="class python:test(error, 'field error', 'field')">
+
+                        <label for="password2"
+                               i18n:translate="label_confirm_password">Confirm password</label>
+                        <div tal:content="error">Validation error output</div>
+
+                        <div class="formHelp"
+                             i18n:translate="help_confirm_password">
+                            Re-enter the password. Make sure the passwords are identical.
+                        </div>
+
+                        <input type="password"
+                               id="password2"
+                               name="password2"
+                               size="10"
+                               />
+                    </div>
+
+                    <div>
+                        <div class="label">&nbsp;</div>
+
+                        <div class="field">
+                            <input class="context"
+                                   type="submit"
+                                   value="Set my password"
+                                   i18n:domain="passwordresettool"
+                                   i18n:attributes="value"
+                                   />
+                        </div>
+                    </div>
+                    <input type="hidden" name="form.submitted" value="1" />
+                </fieldset>
+            </form>
+        </div>
+    </metal:main>
+</body>
+</html>
