@@ -1,0 +1,28 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:gs="http://namespaces.zope.org/genericsetup"
+    i18n_domain="collective.pwexpiry">
+
+  <gs:registerProfile
+      name="0001_to_0002"
+      title="Add a browserlayer"
+      directory="profiles/0001_to_0002"
+      description=""
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
+      />
+
+  <gs:upgradeSteps
+      source="0001"
+      destination="0002"
+      profile="collective.pwexpiry:default">
+
+    <gs:upgradeDepends
+        title="Add a browserlayer, register skins"
+        import_profile="collective.pwexpiry.upgrades:0001_to_0002"
+        run_deps="True"/>
+
+  </gs:upgradeSteps>
+</configure>
